Fix button alignment

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -156,6 +156,7 @@ Blog and Projects pages
   display: flex;
   flex-direction: column;
   max-width: 650px;
+  height: 100%;
   padding: 15px;
   border-bottom: solid 1px var(--color-text);
 }
@@ -175,7 +176,7 @@ Blog and Projects pages media queries
     display: grid;
     grid-gap: 15px;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: max-content max-content max-content;
+    grid-template-rows: min-content min-content min-content;
     grid-auto-flow: row;
     grid-auto-columns: min-content;
     max-width: 1024px;
