--- a/src/styles/modules.css
+++ b/src/styles/modules.css
@@ -285,7 +285,7 @@ Blog and Projects Items AKA collection-items
 }
 
 .collection-item-summary {
-  margin: 0 0 0.5rem 0;
+  margin: 0 0 0.75rem 0;
 }
 
 .collection-item a.button-link {
